--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <button id="myButton" class="btn btn-outline-light btn-lg btn-block">Roll Dice</button>
       </div>
 
-      <div class="container-fluid">
-        <div class="row">
+      <div class="container-fluid dice">
+        <div class="row justify-content-center align-items-center" style="height: 40vh">
           <div class="col-6">
             <div class="dice">
               <p>Player 1</p>
