--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
 <!--each navbar item-->
-          <li class="nav-item">
-            <a class="nav-link" href="https://mechadaddy.github.io/project-list/">Go Back Home</a>
+          <li class="nav-item pl-4">
+            <a class="nav-link pl-4" href="https://mechadaddy.github.io/project-list/">Go Back Home</a>
           </li>
 
         </ul>
