--- a/index.html
+++ b/index.html
@@ -14,32 +14,14 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" style="padding-left:10px">Richard's Portfolio</a>
+      <a class="navbar-brand" href="https://mechadaddy.github.io/project-list">nexTECH</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-<!--the navbar-->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-<!--each navbar item-->
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://mechadaddy.github.io/project-list/">Go Back Home</a>
-          </li>
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://mechadaddy.github.io/drumkit/">Silly lil drum kit</a>
-          </li>
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://mechadaddy.github.io/rockpaper/">Rock Paper Scissors</a>
-          </li>
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://mechadaddy.github.io/dice/">Random Dice Roll</a>
-          </li>
-          </li>
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://name-gen-q11i.onrender.com/">Name Generator</a>
-          </li>
-          <li class="nav-item" style="padding-left:20px">
-            <a class="nav-link pl-4" href="https://qr-gen-7xd7.onrender.com">QR Code Generator</a>
+          <li class="nav-item">
+            <a class="nav-link" href="https://mechadaddy.github.io/project-list">Home</a>
           </li>
         </ul>
       </div>
